--- a/src/assets/scss/header.scss
+++ b/src/assets/scss/header.scss
@@ -1,18 +1,31 @@
-@import "common";
+@import "./common.scss";
 .header{
   position: fixed;
   width: 100%;
-  height: pxTorem(38px);
+  height: pxTorem(78px);
   left:0;
   top:0;
   background: $bg-color;
-  overflow: hidden;
-  .tab-item{
-    float: left;
-    width: 25%;
-    height: pxTorem(38px);
-    line-height: pxTorem(38px);
-    color: $head-foot-color;
-    font-size: pxTorem(13px);
+  .header-center{
+    width: 100%;
+    height: 100%;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    margin: 0 auto;
+    max-width: 640px;
+    overflow: hidden;
+    .tab-item{
+      float: left;
+      width: 25%;
+      height: pxTorem(78px);
+      line-height: pxTorem(78px);
+      color: $head-font-color;
+      font-size: pxTorem(26px);
+      text-align: center;
+      &.active{
+        color: $active-color;
+      }
+    }
   }
 }
