--- a/src/assets/scss/footer.scss
+++ b/src/assets/scss/footer.scss
@@ -2,19 +2,17 @@
 .foot_wamp{
   width: 100%;
   position: fixed;
-  height: pxTorem(96px);
+  height: pxTorem(48px);
   left: 0;
   bottom: 0;
   z-index: 5;
   background: #ffffff;
   border-top: 1px solid #e2e2e2;
-  box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
+  @extend .box-sizing;
 }
 .foot_center{
   width: 100%;
-  max-width: 640px;
+  max-width: $max-width;
   margin: 0 auto;
   overflow: hidden;
   height: 100%;
@@ -25,22 +23,17 @@
     overflow: hidden;
     cursor: pointer;
     img{
-      width: pxTorem(50px);
-      height: pxTorem(50px);
+      width: pxTorem(24px);
+      height: pxTorem(24px);
       display: block;
-      margin: pxTorem(10px) auto 0;
+      margin: pxTorem(5px) auto 0;
       vertical-align: middle;
-      -webkit-filter: grayscale(100%);
-      -moz-filter: grayscale(100%);
-      -ms-filter: grayscale(100%);
-      -o-filter: grayscale(100%);
-      filter: grayscale(100%);
-      filter: gray;
+      @extend .filter100;
     }
     p{
       width: 100%;
       text-align: center;
-      font-size: pxTorem(20px);
+      font-size: pxTorem(12px);
       color: #a3a3a3;
     }
     &.router-link-active{
@@ -48,12 +41,7 @@
         color: $active-color !important;
       }
       img {
-        -webkit-filter: grayscale(0%);
-        -moz-filter: grayscale(0%);
-        -ms-filter: grayscale(0%);
-        -o-filter: grayscale(0%);
-        filter: grayscale(0%);
-        filter: none;
+        @extend .filterNone;
       }
     }
   }
